ODE server tenant startup sequence enhancements