@@ -16,8 +16,8 @@
 	<!-- mvn versions:display-dependency-updates versions:display-plugin-updates -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>10</maven.compiler.source>
-		<maven.compiler.target>10</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 
 	<dependencyManagement>
@@ -33,13 +33,34 @@
 	</dependencyManagement>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+
+		</resources>
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<release>10</release>
+					<release>11</release>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+						</manifest>
+					</archive>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -50,14 +71,13 @@
 						<include>**/*Tests.java,**/*Test.java</include>
 					</includes>
 					<!-- Ignite JVM 9+ arguments -->
-					<argLine>-XX:+AggressiveOpts
-						--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+					<argLine>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
 						--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
 						--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
 						--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
 						--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
-						--illegal-access=permit --add-modules=java.transaction
-						--add-modules=java.xml.bind</argLine>
+						--illegal-access=permit
+						-Djdk.tls.client.protocols=TLSv1.2</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
